fix(build): update build configurations (#900)
- Generate missing api docs.
- Moved custom tasks to buildSrc.